--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6755,3 +6755,41 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
+
+/* Change Background Colors On Scroll */
+body {
+  background: #16A085;
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
+  transition: all 500ms;
+  will-change: background;
+}
+
+section {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  margin: 6em 0 0 0;
+}
+
+h1,h2 {
+  font-size: 5em;
+  font-weight: 900;
+  margin: 0 0.1em;
+}
+
+p {
+  width: 50%;
+  font-size: 1.1em;
+  margin: 0 2em;
+}
+
+.clear {
+  clear: both;
+}
+
+h1 {
+  font-family: 'Monoton', cursive;
+}
