--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6771,7 +6771,11 @@ section {
   display: block;
   width: 100%;
   height: 100vh;
-  margin: 6em 0 0 0;
+  margin: 100px 0 0 0;
+}
+
+section {
+  padding: 50px 0;
 }
 
 h1,h2 {
@@ -6803,7 +6807,7 @@ h1 {
     top: 0;
     left: 0;
     background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background-color: rgba(0,0,0, 0.77);
     overflow-y: hidden;
     transition: 0.5s;
 }
@@ -6826,7 +6830,7 @@ h1 {
 }
 
 .overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
+    color: #16A085;
 }
 
 .overlay .closebtn {
@@ -6834,6 +6838,11 @@ h1 {
     top: 20px;
     right: 45px;
     font-size: 60px;
+    color: red;
+}
+
+nav ul{
+    list-style-type: none;    
 }
 
 @media screen and (max-height: 450px) {
@@ -6844,4 +6853,14 @@ h1 {
     top: 15px;
     right: 35px;
   }
+}
+
+/* Footer */
+#footer {
+  width: 100%;
+  height: 70px;
+  padding-top: 35px;
+  text-align: center;
+  text-align: -moz-center; 
+  background-color: #333;
 }
