Added header background fullscreen video

--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6858,9 +6858,41 @@ nav ul{
 /* Footer */
 #footer {
   width: 100%;
-  height: 70px;
+  height: 120px;
   padding-top: 35px;
   text-align: center;
   text-align: -moz-center; 
   background-color: #333;
 }
+
+/* <!-- Header Full Screen Video Background --> */
+#hd-background {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(img/data-center.jpg) no-repeat;
+    background-size: cover;
+}
+
+
+.hd-video-text {
+  margin-top: 300px;
+}
+
+
+#basic-reseller {
+  margin-top: 770px;
+}
+
+/* DISABLE the Horizontal Scroll */
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    }
