--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -7983,6 +7983,20 @@ h1 {
   font-family: 'Monoton', cursive;
 }
 
+/* font-awesome */
+header .fa-caret-down, header .fa-caret-up {
+  color: red;
+  font-size: 80px;
+  border-style: none;
+  margin-top: 280px;
+}
+
+section .fa-caret-down, section .fa-caret-up, footer .fa-caret-up {
+  color: red;
+  font-size: 80px;
+  border-style: none;
+}
+
 /* Fullscreen Overlay Nav */
 .overlay {
   height: 0%;
