--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6793,9 +6793,24 @@ p {
 .clear {
   clear: both;
 }
+ 
  /* google font API */
 h1 {
   font-family: 'Monoton', cursive;
+}
+
+/* font-awesome */
+header .fa-caret-down, header .fa-caret-up {
+  color: red;
+  font-size: 80px;
+  border-style: none;
+  margin-top: 280px;
+}
+
+section .fa-caret-down, section .fa-caret-up, footer .fa-caret-up {
+  color: red;
+  font-size: 80px;
+  border-style: none;
 }
 
 /* Fullscreen Overlay Nav */
