Injected html5 and removed the hash on the links - angular-route

--- a/include/route-index.html
+++ b/include/route-index.html
@@ -18,19 +18,14 @@
 
 	    <!-- SCROLLS -->
 	    <!-- load css and fontawesome-->
-	    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
-	    -->
 	    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Fugaz+One|Ultra" rel="stylesheet">
 	    <link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-		<link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.9/font-awesome-animation.min.css'>
-		
+		<link rel="stylesheet" type="text/css" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.9/font-awesome-animation.min.css'>		
 	    <link rel="stylesheet" href="../css/pd.yeap.css" />
-
 
 	    <!-- SPELLS -->
 	    <!-- load JS Files: on this 1 js file, I have shrunk angular-route, angular, bootstrap, jQuery and my js files  
-	     -->
-	   	
+	     -->   	
 	    <script type="text/javascript" src="../js/pd.yeap.js"></script>
 	    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 	    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
@@ -45,13 +40,13 @@
         	<div id="myNav" class="overlay">
 	           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 				  <ul class="overlay-content">
-				    <li><a href="#video-header">Welcome</a></li>
-				    <li><a href="#home">Home</a></li>
-				    <li><a href="#basic-reseller">Basic Reseller</a></li>
-				    <li><a href="#pro-reseller">Pro Reseller</a></li>
-				    <li><a href="#support">Customer Support</a></li>
-				    <li><a href="#my-account">My Account</a></li>
-				    <li><a href="#contact">Contact us</a></li>
+				    <li><a href="video-header">Welcome</a></li>
+				    <li><a href="home">Home</a></li>
+				    <li><a href="basic-reseller">Basic Reseller</a></li>
+				    <li><a href="pro-reseller">Pro Reseller</a></li>
+				    <li><a href="support">Customer Support</a></li>
+				    <li><a href="my-account">My Account</a></li>
+				    <li><a href="contact">Contact us</a></li>
 				  </ul>
 			</div>
 			<div class="container-fluid">
@@ -101,10 +96,7 @@
         <main ng-app="yeapApp">
         	<ng-view></ng-view>
         </main>
-        
-
-        
-        
+               
         <!-- FOOTER-->
         <footer id="footer" data-color="#222222">
         	<article class="container-fluid">        		
