Injected the contents on myaccount section and created the sign in, sign up buttons

--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -7958,11 +7958,15 @@ h2 {
 /* Change Background Colors On Scroll */
 body {
   background: #CC333F;
-  color: #EB6841;
+  /*color: #EB6841;*/
   font-family: 'Raleway', sans-serif;
   margin: 0 auto;
   transition: all 500ms;
   will-change: background;
+}
+
+.navbar-custom, .btn-info {
+  background-color: #1D6CCD;
 }
 
 section {
@@ -7995,6 +7999,10 @@ section {
   font-family: 'Fugaz One', cursive;
   color: red;
   font-size: 2em;
+}
+
+.btn-lg, .btn-group-lg > .btn {
+  line-height: 2.333;
 }
 
 .clear {
@@ -8036,8 +8044,8 @@ section > header {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.77);
+  background-color: #1d6ccd;
+  background-color: rgba(29, 108, 205, 0.77);
   overflow-y: hidden;
   transition: 0.5s;
 }
@@ -8054,7 +8062,7 @@ section > header {
   padding: 8px;
   text-decoration: none;
   font-size: 36px;
-  color: #818181;
+  color: #FFF;
   display: block;
   transition: 0.3s;
 }
