--- a/include/header.html
+++ b/include/header.html
@@ -20,4 +20,10 @@
 						});
 					</script>
 			      </div>
+			      <!-- Sign in Button -->
+			    <div class="row">
+			    	<div class="col-md-12 text-center">
+			    		<a href="https://sso.secureserver.net/?app=mya&path=%2f%3fci%3d3276%26prog_id%3dyeapnetwork&plid=309511&prog_id=yeapnetwork" class="btn-lg btn-info" role="button">Sign in</a>
+			    	</div>
+			    </div>
 			  </article>
