--- a/include/login.html
+++ b/include/login.html
@@ -1,17 +1,62 @@
-<div class="container">
+<!-- <script type="text/javascript" src="../js/yeap-app.js"></script> 
+<script type="text/javascript" scr="login.js"></script> -->
+
+
+<div class="container" ng-controller="myCtrl">
 	        	<header>
 	        		<h1>My Account</h1>
 	        		<hr class="">
 	        	</header>
-	        	<div class="row">
-		        	<article class="col-md-..">
-		        		<header>
-		        			<h3></h3>
-		        		</header>
-		        		<!-- angular templating -->
-            			<!-- this is where content will be injected -->
-		        	</article>
-	        	</div> <!-- End row -->
 	        	
-        	</div> <!-- End container -->
+		        	<article class="row panel-group">
+		        			<div class="col-sm-5 panel panel-primary">
+						      <div class="panel-heading">
+						      	<h3>Create a Free Account</h3>
+						      </div>
+						      <div class="panel-body">
+						      		<p>If you are not ready yet to get your reseller plan, at least get a free account.</p>
+						      		<h4>Benefice of the free account</h4>
+						      		<ul>
+						      			<li>Free promotion with discount code</li>
+						      			<li>Easy to get a tech support on the phone to answer all your questions that you might have</li>
+						      			<li>Start getting used to the back office</li>
+						      	    </ul>
+						      </div>
+						      <div class="text-center">
+					    		<a href="https://sso.secureserver.net/account/create?path=/%3Fci%3D3276%26prog_id%3Dyeapnetwork&app=mya&ssoreturnpath=/%253Fpath%253D/%25253Fci%25253D3276%252526prog_id%25253Dyeapnetwork%2526app%253Dmya%2526plid%253D309511&plid=309511" class="btn-lg btn-info" role="button">Create an Account</a>
+					    	  </div><br>
+						    </div>
+
+						    <div class="col-sm-5 col-md-offset-2  panel panel-primary">
+						      <div class="panel-heading">
+						      	<h3>Access Your Back Office</h3>
+						      </div>
+						      <div class="panel-body">
+						      		<h4>Login to manage your free products</h4>
+						      	    <ul>
+						      	    	<li>Deluxe Linux Hosting with cPanel</li>
+						      	    	<li>Business Email</li>
+						      	    	<li>Business Plus Website Builder</li>
+						      	    	<li>Search Engine Visibility</li>
+						      	    	<li>Email Marketing - Pro</li>
+						      	    	<li>Deluxe Online Storage</li>
+						      	    </ul>
+						      	    <h4>Manage your store</h4>
+						      	    <ul>
+						      	    	<li>Sales commission report</li>
+						      	    	<li>Customer Lookup</li>
+						      	    	<li>Discount Customer Sales</li>
+						      	    	<li>Storefront Designer and Social Media</li>
+						      	    	<li>Fix your own product prices</li>
+						      	    	<li>Manage you store promotions and more</li>
+						      	    </ul>
+						      </div>
+						      <div class="text-center">
+					    		<a href="https://sso.secureserver.net/?app=mya&path=%2f%3fci%3d3276%26prog_id%3dyeapnetwork&plid=309511&prog_id=yeapnetwork" class="btn-lg btn-info" role="button">Sign in</a>
+					    	  </div><br>
+						    </div>
+		        	</article>	        	
+</div> <!-- End container -->
+        
+        	
         	
