Injected content on the home section and created the sidebar

--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -8127,6 +8127,10 @@ nav ul {
   position: relative;
 }
 
+.panel {
+  border: none;
+}
+
 /* DISABLE the Horizontal Scroll */
 html, body {
   max-width: 100%;
