--- a/include/header.html
+++ b/include/header.html
@@ -7,13 +7,13 @@
 			  <article class="container-fluid">
 			    <div class="row">
 			      <div class="col-md-12 text-center hd-video-text">
-			        <h1>Yeap Network</h1>
-			        <h2>Hosting and App Services Business Opportunity</h2>
+			        <h1>Make Money Now</h1>
+			        <h2>With the hottest reseller plan around</h2>
 			        <!-- Add typeit - a jQuery plugin that allows auto-typing texts -->
 			        <h3 id="auto-typing"></h3> 
 					<script type="text/javascript">
                    		$('#auto-typing').typeIt({
-						     strings: [".RELIABLE .SCALABLE .EFICIENT", ".SECURE .SUSTAINABLE", "YOU ARE A FEW CLICKS AWAY TO BECOME A CERTIFIED HOSTING RESELLER"],
+						     strings: ["Build your own successful online business!", "Set the retail pricing YOU want", "Customize YOUR Web site", "Get started today for only $199.00"],
 						     speed: 250,
 						     breakLines: false,
 						     loopDelay: 500
@@ -23,7 +23,7 @@
 			      <!-- Sign in Button -->
 			    <div class="row">
 			    	<div class="col-md-12 text-center">
-			    		<a href="https://sso.secureserver.net/?app=mya&path=%2f%3fci%3d3276%26prog_id%3dyeapnetwork&plid=309511&prog_id=yeapnetwork" class="btn-lg btn-info" role="button">Sign in</a>
+			    		<a href="https://www.secureserver.net/reseller/basic-domain-reseller.aspx?ci=3272&prog_id=yeapnetwork" class="btn-lg btn-info" role="button">Sign Up</a>
 			    	</div>
 			    </div>
 			  </article>
