--- a/include/home.html
+++ b/include/home.html
@@ -1,18 +1,23 @@
 <div class="container">
 	        	<header>
-	        		<h1>Home</h1>
+	        		<h1>No Deposits or Revenue Sharing</h1>
 	        		<hr class="">
 	        	</header>
-	        	<div class="row">
-		        	<article class="col-md-..">
+	
+		        	<article class="row">
 		        		<header>
-		        			<h3></h3>
+		        			<h3>Build your own successful online business</h3>
 		        		</header>
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
-		        	</article>
-	        	</div> <!-- End row -->
-	        	
-			    </div> <!-- End font-awesome row -->
-        	</div> <!-- End container -->
+            			<p>We provide you with everything you need: products, support, even a professional web site. And with our turnkey setup, your site is online from the moment you sign up! Plus, you can:</p>
+            			<ul>
+            				<li>Build YOUR product mix! Choose from Domains‡, Hosting, Email, Site Builders and much more.</li>
+            				<li>Set the retail pricing YOU want. There are no deposits, minimums or advance purchases required.</li>
+            				<li>Customize YOUR Web site. Add your own logo and images, customize colors and more. Or simply choose one of six ready-made designs. <a target="_blank" href="http://usawebsolution.com">See a Reseller Site in Action.</a></li>
+            			</ul>	
+		        	</article>  
+		        </div> <!-- End container -->
+     
+        	
         	
