--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6942,6 +6942,10 @@ nav ul{
   position: relative;
 }
 
+.panel {
+  border: none;
+}
+
 /* DISABLE the Horizontal Scroll */
 html, body {
     max-width: 100%;
