--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -7003,7 +7003,15 @@ html, body {
 #auto-typing {
   font-size: 1.5em;
 }
+   }
 
+   /*angularjs animation*/
+   .not-visible {
+  visibility: hidden;
+}
+
+body.lock-scroll{
+  overflow: hidden;
 }
 
 /* Footer */
