Added bg-panel-primary background to panel-primary and removed scrool snap on the last section in order to be able to scroll to the footer

--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -6946,6 +6946,10 @@ nav ul{
   border: none;
 }
 
+.bg-panel-primary {
+  background-color: #ADD8E6;
+}
+
 /* DISABLE the Horizontal Scroll */
 html, body {
     max-width: 100%;
