--- a/include/support.html
+++ b/include/support.html
@@ -4,12 +4,11 @@
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
-		        	<article class="col-md-..">
-		        		<header>
-		        			<h3></h3>
-		        		</header>
+		        	<article class="col-md-12">
+		        		
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
+            			content-support
 		        	</article>
 	        	</div> <!-- End row -->
 	        	
