--- a/include/pro-reseller.html
+++ b/include/pro-reseller.html
@@ -4,7 +4,7 @@
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
-		        	<article class="col-md-..">
+		        	<article col-md-12>
 		        		<header>
 		        			<h3></h3>
 		        		</header>
@@ -14,4 +14,5 @@
 	        	</div> <!-- End row -->
 	        	
         	</div> <!-- End container -->
+        	
         	
