--- a/include/header.html
+++ b/include/header.html
@@ -7,7 +7,7 @@
 			  <article class="container-fluid">
 			    <div class="row">
 			      <div class="col-md-12 text-center hd-video-text">
-			        <h1>Make Money Now</h1>
+			        <h1 class="aniview fast" av-animation="rotateIn">Make Money Now</h1>
 			        <h2>With the hottest reseller plan around</h2>
 			        <!-- Add typeit - a jQuery plugin that allows auto-typing texts -->
 			        <h3 id="auto-typing"></h3> 
