--- a/include/support.html
+++ b/include/support.html
@@ -1,15 +1,22 @@
 <div class="container-fluid">
 	        	<header>
 	        		<h1>Support</h1>
+	        		<h2>1-888-407-9575</h2>
 	        		<hr class="">
 	        	</header>
 	        	<div class="row">
-		        	<article class="col-md-12">
-		        		
+		        	<article class="col-md-12 support-video-text text-center">
+		        		<h1>YOUR SATISFACTION IS OUR PRIORITY</h1>
+		        		<h2>FOR FASTER SERVICE, GET YOUR PIN & CUSTOMER # READY</h2>
+		        		<h3 class="white-default-h3">If you don't have one yet, you can get it for free</h3>
+		        		<a href="https://sso.secureserver.net/account/create?path=/%3Fci%3D3276%26prog_id%3Dyeapnetwork&app=mya&ssoreturnpath=/%253Fpath%253D/%25253Fci%25253D3276%252526prog_id%25253Dyeapnetwork%2526app%253Dmya%2526plid%253D309511&plid=309511"><button type="button" class="btn btn-primary">GET A FREE CUSTOMER NUMBER</button></a>
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
-            			content-support
+            			
+            			
 		        	</article>
+		        	
+		        	<marquee marquee-speed="show">WE ARE HERE TO HELP YOU 24/7, YES, 24/7 A WEEK, EVEN ON THE HOLLYDAYS</marquee>
 	        	</div> <!-- End row -->
 	        	
         	</div> <!-- End container -->
