Completed the contact section

--- a/include/contact.html
+++ b/include/contact.html
@@ -1,17 +1,27 @@
 <div class="container-fluid">
-	        	<header>
-	        		<h1>Contact us</h1>
-	        		<hr class="">
-	        	</header>
-	        	<div class="row">
-		        	<article class="col-md-..">
-		        		<header>
-		        			<h3></h3>
-		        		</header>
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
-		        	</article>
+            	<div class="row">
+					<article class="col-md-5 white-default-h1">
+					<h1>Contact us</h1>
+	        		<hr class="">
+	        		<h3>World Financial Center</h3>
+	        		<h4>New York, NY 10281</h4>
+	        		<h4>1-888-407-9575</h4>
+	        	    </article>                
+
+
+	                <article class="col-md-7">
+	                  
+					    <div id="mf_placeholder" 
+						     data-formurl="http://yeapnetwork.com/fm/embed.php?id=10741" 
+						     data-formheight="825"  
+						     data-paddingbottom="10">
+						</div>
+						<script type="text/javascript" src="http://yeapnetwork.com/fm/js/jquery.ba-postmessage.min.js"></script>
+						<script type="text/javascript" src="http://yeapnetwork.com/fm/js/machform_loader.js"></script>
+
+			        </article>
 	        	</div> <!-- End row -->
-	        	
         	</div> <!-- End container -->
         	
