Fixed the parallax background image

--- a/css/pd.yeap.css
+++ b/css/pd.yeap.css
@@ -7945,12 +7945,12 @@ button.close {
 *
 *
 */
-.white-default-h1, .white-default-h2, .white-default-h3, .white-default-h4, .white-default-h5, .white-default-h6 {
+.white-default-hd {
   color: #FFF;
   font-weight: bold;
 }
 
-.red-default-h1, .red-default-h2, .red-default-h3, .red-default-h4, .red-default-h5, .red-default-h6 {
+.red-default-hd {
   color: #FF0000;
   font-weight: bold;
 }
@@ -8016,6 +8016,17 @@ h2 {
 
 .container-fluid h1 {
   color: #fff;
+}
+
+/*Basic Background Parallax Effect With jQuery And CSS3 - parallax.js*/
+.parallax {
+  background: none;
+  min-height: 200px;
+  background-size: cover;
+  background-attachment: fixed;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 /* font-awesome */
@@ -8227,19 +8238,6 @@ body.lock-scroll {
   overflow: hidden;
 }
 
-/*Basic Background Parallax Effect With jQuery And CSS3 - parallax.js*/
-.parallax {
-  background: none;
-  min-height: 600px;
-  background-size: cover;
-  background-attachment: fixed;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  opacity: 0.70;
-  filter: alpha(opacity=50);
-}
-
 .content-support {
   position: relative;
 }
@@ -8256,8 +8254,17 @@ body.lock-scroll {
   z-index: 100;
 }
 
-.bv-video, .parallax, .hd-background, #contact {
+.bv-video, .hd-background, #contact {
   filter: brightness(50%);
+}
+
+/*Form Contact us*/
+textarea.medium {
+  height: 7em;
+}
+
+.form_description h1 {
+  display: none;
 }
 
 /* Footer */
@@ -8265,7 +8272,7 @@ body.lock-scroll {
   text-align: center;
   text-align: -moz-center;
   background-color: #1D6CCD;
-  height: 170px;
+  height: 50px;
 }
 
 #footer p {
