--- a/include/contact.html
+++ b/include/contact.html
@@ -2,7 +2,7 @@
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
             	<div class="row">
-					<article class="col-md-5 white-default-h1">
+					<article class="col-md-5 white-default-hd">
 					<h1>Contact us</h1>
 	        		<hr class="">
 	        		<h3>World Financial Center</h3>
