--- a/include/support.html
+++ b/include/support.html
@@ -8,8 +8,8 @@
 		        	<article class="col-md-12 support-video-text text-center">
 		        		<h1>YOUR SATISFACTION IS OUR PRIORITY</h1>
 		        		<h2>FOR FASTER SERVICE, GET YOUR PIN & CUSTOMER # READY</h2>
-		        		<h3 class="white-default-h3">If you don't have one yet, you can get it for free</h3>
-		        		<a href="https://sso.secureserver.net/account/create?path=/%3Fci%3D3276%26prog_id%3Dyeapnetwork&app=mya&ssoreturnpath=/%253Fpath%253D/%25253Fci%25253D3276%252526prog_id%25253Dyeapnetwork%2526app%253Dmya%2526plid%253D309511&plid=309511"><button type="button" class="btn btn-primary">GET A FREE CUSTOMER NUMBER</button></a>
+		        		<h3 class="white-default-hd">If you don't have one yet, you can get it for free</h3>
+		        		<a href="https://sso.secureserver.net/account/create?path=/%3Fci%3D3276%26prog_id%3Dyeapnetwork&app=mya&ssoreturnpath=/%253Fpath%253D/%25253Fci%25253D3276%252526prog_id%25253Dyeapnetwork%2526app%253Dmya%2526plid%253D309511&plid=309511"><button type="button" class="btn-lg btn-primary">GET A FREE CUSTOMER NUMBER</button></a>
 		        		<!-- angular templating -->
             			<!-- this is where content will be injected -->
             			
